--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,8 +2,14 @@
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 24px;
   font-weight: 600;
+}
+
+.tardeLink{
+  font-size: 14px;
+  border-bottom: 1px solid #fff;
 }
