--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,15 +1,14 @@
 .dashboard{
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 24px;
   font-weight: 600;
+  text-align: center;
 }
 
-.tardeLink{
+.tradeLink{
   font-size: 14px;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid var(--color-white);
 }
