--- a/src/app/trade/components/charts/tokenList/tokenList.module.css
+++ b/src/app/trade/components/charts/tokenList/tokenList.module.css
@@ -1,17 +1,11 @@
 .container{
     position: absolute;
-    background: #16182E;
+    background: var(--color-black-secondary);
     height: 280px;
     width: 424px;
-    border: 1px solid #363965;
+    border: 1px solid var(--color-outline);
     border-radius: 4px;
     z-index: 999;
-}
-
- 
-
-.searchInputContainer{
-    padding: 0 1rem;
 }
 
 .searchInput{
@@ -19,56 +13,42 @@
     outline: none;
     width: 100%;
     padding: 10px 16px;
-    background: #16182E;
-    border: 1px solid #363965;
+    background: var(--color-black-secondary);
+    border: 1px solid var(--color-outline);
     border-radius: 4px;
     font-size: 16px;
-    color: #fff;
+    color: var(--color-white);
 }
 
 .coins{
-    border-top: 1px solid #363965;
-    padding: 0 1rem;
-    padding-top: 12px;
+    border-top: 1px solid var(--color-outline);
     display: flex;
     flex-direction: column;
     gap: 8px;
-    /* height: calc(100vh - 116px); */
     height: 200px;
-    /* box-sizing: border-box; */
     overflow-y: scroll;
 }
 
-
 .tableHead{
     text-align: start;
-    color: #B8BBC1;
+    color: var(--color-gray);
     font-weight: 400;
     padding-bottom: 12px;
 }
+
 .tableDataFirstCol{
     display: flex;
     align-items: center;
-    color: #B8BBC1;
+    color: var(--color-gray);
 }
+
 .coinName{
-    padding-left: 4px;
+    padding-left: 6px;
 }
 
 .tableData{
     padding-bottom: 12px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 @media (max-width: 500px) {
     .container{
