--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,12 +1,11 @@
 .button{
     cursor: pointer;
     padding: 8px 2rem;
-    /* border-radius: 8px; */
-    color: #fff;
+    color: var(--color-white);
     font-size: 13px;
     font-weight: 400;
-    background: #2D42FC;
-    border: 2px solid #2D42FC;
+    background: var(--color-blue);
+    border: 2px solid var(--color-blue);
     width: fit-content;
     transition: all 0.5s ease-in-out;
 }
@@ -25,16 +24,14 @@
 }
 
 .secondary{
-    background: #16182E;
-    border: 2px solid #16182E;
-    /* font-size: 18px; */
+    background: var(--color-blue);
+    border: 2px solid var(--color-blue);
     font-weight: 600;
 }
 
 .large{
-    background: #2D42FC;
-    border: 2px solid #2D42FC;
-    /* font-size: 13px; */
+    background: var(--color-blue);
+    border: 2px solid var(--color-blue);
     font-weight: 500;
     padding: 12px 3rem;
 }
