--- a/src/app/trade/components/longShortSwap/inputField/inputField.module.css
+++ b/src/app/trade/components/longShortSwap/inputField/inputField.module.css
@@ -1,5 +1,5 @@
 .container{
-    background: #1F243E;
+    background: var(--color-black-tertiary);
     padding: 12px;
 }
 
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 12px;
-    color: #BABAC0;
+    color: var(--color-gray);
 }
 
 .inputRow{
@@ -21,11 +21,10 @@
 .input{
     outline: none;
     border: none;
-    background: #1F243E;
-    color: #fff;
+    background: var(--color-black-tertiary);
+    color: var(--color-white);
     font-size: 24px;
     width: 100%;
-    /* margin-right: 2rem; */
 }
 
 .coinBox{
@@ -35,33 +34,34 @@
     cursor: pointer;
 }
 
-
 .logo{
     margin-right: 8px; 
 }
+
 .coinName{
     font-size: 20px;
     font-weight: 500;
 }
+
 .icon{
     margin-left: 5px;
 }
 
-
-
 .swiper{
     margin-top: 12px;
 }
+
 .swipperBtnContainer{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .swipperBtn{
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: #2D42FC;
+    background: var(--color-blue);
     position: absolute;
     display: flex;
     align-items: center;
@@ -73,5 +73,9 @@
 
 .swipperBtn:hover{
     opacity: 0.8;
+}
+
+.divider{
+    margin-top: 12px;
 }
 
