--- a/src/app/trade/components/charts/chart/chart.module.css
+++ b/src/app/trade/components/charts/chart/chart.module.css
@@ -1,9 +1,10 @@
 .chart{
     width: 100%;
     height: 415px;
-    background: var(--color-black-secondary);
+    /* background: var(--color-black-secondary); */
     margin-top: 12px;
-    padding: 12px;
+    /* padding: 12px; */
+    /* border-radius: 4px; */
 }
 
 .chartSwitchButton{
