--- a/src/app/trade/components/charts/chart/chart.module.css
+++ b/src/app/trade/components/charts/chart/chart.module.css
@@ -1,19 +1,43 @@
 .chart{
     width: 100%;
     height: 415px;
-    /* background: var(--color-black-secondary); */
     margin-top: 12px;
-    /* padding: 12px; */
-    /* border-radius: 4px; */
+}
+
+.dropdown{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    background: #21243F;
+    z-index: 999;
+    padding: 8px 0;
+    width: 180px;
+    border-radius: 4px;
+}
+
+.iconContainer{
+    padding: 1rem;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.icon{
+    cursor: pointer;
 }
 
 .chartSwitchButton{
     background: transparent;
     cursor: pointer;
     color: var(--color-gray);
-    border: 1px solid var(--color-gray);
-    padding: 2px 4px;
-    margin-left: 12px;
-    margin-bottom: 12px;
+    border: none;
+    width: 100%;
+    text-align: start;
+    padding: 1rem 2rem;
 }
+
+.chartSwitchButton:hover{
+    background: var(--color-black-primary);
+}
+
 
