--- a/src/components/pageLayout/pageLayout.module.css
+++ b/src/components/pageLayout/pageLayout.module.css
@@ -4,3 +4,10 @@
     margin: 0 auto;
     min-height: 100vh;
 }
+
+
+@media (max-width: 580px) {
+    .pageLayout{
+        padding: 1rem;
+    }
+  }
